force-app/main/default/objects/TCL_Question__c/fields/Number_of_Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Correct_Answer__c</fullName>
    <label>Number of Correct Answer</label>
    <summaryFilterItems>
        <field>TCL_Answer__c.Is_User_Correct__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>TCL_Answer__c.TCL_Question__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>