force-app/main/default/objects/TCL_Question__c/fields/Number_of_Total_Answers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Total_Answers__c</fullName>
    <label>Number of Total Answers</label>
    <summaryForeignKey>TCL_Answer__c.TCL_Question__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>