force-app/main/default/objects/TCL_Question__c/fields/Number_of_Unchecked_Answers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Unchecked_Answers__c</fullName>
    <label>Number of Unchecked Answers</label>
    <summaryFilterItems>
        <field>TCL_Answer__c.User_check__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>TCL_Answer__c.TCL_Question__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>