force-app/main/default/objects/TCL_Question__c/fields/Question_Bank__c.field-meta.xml
<CustomField>
    <fullName>Question_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Bank</label>
    <referenceTo>Question_bank__c</referenceTo>
    <relationshipName>TCL_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>