force-app/main/default/objects/TCL_Question__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <formula>IF(AND(
Number_of_Expected_Answer__c = Number_of_Correct_Answer__c ,
 Number_of_Unchecked_Answers__c &lt; Number_of_Total_Answers__c ), &quot;CORRECT&quot;,
IF(
 Number_of_Unchecked_Answers__c = Number_of_Total_Answers__c ,&quot;UNANSWERED&quot;, &quot;INCORRECT&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result</label>
    <type>Text</type>
</CustomField>